--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
-version: '3.1'
 services:
   stats-server:
+    build:
+      context: ./stats/stats-server/
+      dockerfile: Dockerfile
+    environment:
+      - STATS_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat_svc
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    restart: on-failure
 
   stats-db:
     image: postgres:14-alpine
-
-  ewm-service:
+    container_name: stats_server_db
+    environment:
+      - POSTGRES_USER=stat_svc
+      - POSTGRES_PASSWORD=stat_svc
+      - POSTGRES_DB=stat_svc
+    volumes:
+      - ./stats_db_data:/var/lib/postgresql/data
     ports:
-      - "8080:8080"
+      - "5435:5432"
 
-  ewm-db:
-    image: postgres:14-alpine
+  #ewm-service:
+    #ports:
+      #- "8080:8080"
+
+  #ewm-db:
+   # image: postgres:14-alpine
