--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
 	</parent>
 
 	<name>Explore With Me</name>
+    <modules>
+        <module>stats</module>
+		<module>stats/stats-client</module>
+		<module>stats/stats-dto</module>
+		<module>stats/stats-server</module>
+	</modules>
 
-	<groupId>ru.practicum</groupId>
+    <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
