stat_svc - prepared stat server and environment for app run

--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -2,10 +2,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=9090
 # Docker Postgresql Integration
-spring.datasource.url=jdbc:postgresql://stats-db:5432/stat_svc
-spring.datasource.username=stat_svc
-spring.datasource.password=stat_svc
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://stats-db:5432/stat_svc
+#spring.datasource.username=stat_svc
+#spring.datasource.password=stat_svc
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -26,7 +26,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 # Local Postgresql Integration
-#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
