--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,10 @@ services:
     ports:
       - "5435:5432"
 
-  #ewm-service:
-    #ports:
-      #- "8080:8080"
+  ewm-service:
+    ports:
+      - "8080:8080"
 
-  #ewm-db:
-   # image: postgres:14-alpine
+  ewm-db:
+    image: postgres:14-alpine
     #
