--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<module>stats/stats-client</module>
 		<module>stats/stats-dto</module>
 		<module>stats/stats-server</module>
-	</modules>
+        <module>main-service</module>
+    </modules>
 
     <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
