--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,22 @@ services:
       - "5435:5432"
 
   ewm-service:
+    build:
+      context: ./main-service/
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
 
   ewm-db:
     image: postgres:14-alpine
-    #
+    container_name: main_service_ewm-db
+    environment:
+      - POSTGRES_USER=main_service
+      - POSTGRES_PASSWORD=main_service
+      - POSTGRES_DB=main_service
+    volumes:
+      - ./main_service_db_data:/var/lib/postgresql/data
+    ports:
+      - "5436:5433"
