--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -71,7 +71,7 @@
 
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>client</artifactId>
+            <artifactId>stats-client</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
