main_svc - implemented main service

--- a/main-service/Dockerfile
+++ b/main-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM amazoncorretto:11-alpine-jdk
 MAINTAINER practicum.ru
-COPY ./target/main-service-0.0.1-SNAPSHOT.jar stats-server-1.0.0.jar
+COPY ./target/main-service-0.0.1-SNAPSHOT.jar main-service-1.0.0.jar
 ENTRYPOINT ["java","-jar","/stats-server-1.0.0.jar"]
