main_svc - implemented main service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - ./stats_db_data:/var/lib/postgresql/data
     ports:
-      - "5435:5432"
+      - "6541:5432"
 
   ewm-service:
     build:
@@ -31,6 +31,10 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+      - stats-server
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
+      - STATS_SERVER_URL=http://stats-server:9090
 
   ewm-db:
     image: postgres:14-alpine
@@ -42,4 +46,4 @@ services:
     volumes:
       - ./main_service_db_data:/var/lib/postgresql/data
     ports:
-      - "5436:5433"
+      - "6542:5432"
