--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,32 +1,26 @@
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=9090
-# Docker Postgresql Integration
-spring.datasource.url=jdbc:postgresql://stats-db:5432/stat_svc
+logging.level.com.zaxxer.hikari=TRACE
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.transaction.interceptor=DEBUG
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://stats_server_db:5432/stat_svc
 spring.datasource.username=stat_svc
 spring.datasource.password=stat_svc
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-#H2 test db
-#spring.datasource.url=jdbc:h2:mem:testdb
+#---
+#spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:main-stats
+#spring.datasource.username=user
+#spring.datasource.password=userpassword
 #spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-
-# Local Postgresql Integration
-#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.postgresql.Driver
