--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://main_service_ewm-db:5432/main_service
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/main-service
 spring.datasource.username=main_service
 spring.datasource.password=main_service
 #---
