--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -14,9 +14,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/main-service
-spring.datasource.username=main_service
-spring.datasource.password=main_service
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/mainservicedb
+spring.datasource.username=root
+spring.datasource.password=root
 #---
 spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
