--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -13,9 +13,9 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://stats_server_db:5432/stat_svc
-spring.datasource.username=stat_svc
-spring.datasource.password=stat_svc
+spring.datasource.url=jdbc:postgresql://stats_server_db:5432/stats
+spring.datasource.username=root
+spring.datasource.password=root
 
 #---
 #spring.config.activate.on-profile=ci,test
