--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -13,16 +13,16 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://ewm-db:5432/mainservicedb
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/mainservicedb
+spring.datasource.username=root
+spring.datasource.password=root
 #---
 spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm-db
-spring.datasource.username=user
-spring.datasource.password=userpassword
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:ewm-db
+#spring.datasource.username=user
+#spring.datasource.password=userpassword
 #---
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 hibernate.show_sql=true
