--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -12,15 +12,15 @@ logging.level.org.springframework.transaction.interceptor=DEBUG
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://stats_server_db:5432/stats
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://stats_server_db:5432/stats
+spring.datasource.username=root
+spring.datasource.password=root
 
 #---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:main-stats
-spring.datasource.username=user
-spring.datasource.password=userpassword
-spring.h2.console.enabled=true
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+#pring.datasource.url=jdbc:h2:mem:main-stats
+#spring.datasource.username=user
+#spring.datasource.password=userpassword
+#spring.h2.console.enabled=true
