--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -14,9 +14,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/mainservicedb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
+spring.datasource.username=user
+spring.datasource.password=userpassword
 #---
 spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
@@ -24,5 +24,5 @@ spring.config.activate.on-profile=ci,test
 #spring.datasource.username=user
 #spring.datasource.password=userpassword
 #---
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 hibernate.show_sql=true
