main_stat, and also fixes in stats client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,10 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=userpassword
 
-  main-service:
+  ewm-service:
     build: main-service
-    image: main-service
-    container_name: main-service
+    image: ewm-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
     depends_on:
